# ignisight

./: .gitignore  LICENSE  README.md  pyproject.toml
ignisight/commands/: train_cli_app.py
ignisight/criterions/: __init__.py  e2e.py  temp_fix.py
ignisight/datasets/: e2e.py  temp_fix.py
ignisight/draw/: cloud_map.py  get_data.py
ignisight/infer/: cloud_map.py  temp_fix.py  temp_vector_inferencer.py
ignisight/models/: __init__.py  bert.py  lstm.py  resnet34.py  unet.py
ignisight/presets/: base_train.yaml  temp_fix.yaml
ignisight/tasks/: __init__.py  e2e.py  temp_fix.py
tests/: draw.py  drawTempCloldMap.py  drawText.py  raw_draw.py  tempCorrection.py  test_align.py  test_dataset.py  test_draw.py  test_load_data.py
