[project]
name = "ignisight"
version = "0.1.0"
description = ""
authors = [
    {name = "MigoXV",email = "1695587905@qq.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "torch (==2.5.1)",
    "torchaudio (==2.5.1)",
    "torchvision (==0.20.1)",
    "numpy (==2.0.1)",
    "pillow (==11.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
