[project]
name = "ignisight"
version = "0.1.0"
description = ""
authors = [
    {name = "MigoXV",email = "1695587905@qq.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "torch (==2.5.1)",
    "torchaudio (==2.5.1)",
    "torchvision (==0.20.1)",
    "numpy (==2.0.1)",
    "pillow (==11.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xlwt (>=1.3.0,<2.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "fairseq (>=0.12.2,<0.13.0)",
    "imageio (>=2.37.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
black = "^25.1.0"
isort = "^6.0.1"

